Some minor changes: - Reconstruct httml code for putting javascript, css files - Fix problem of images not showing when the site runs under a sub directory - Add some initial code for Jquery

--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@ body {
 	font-weight: 300;
 	font-size: 2em;
 	position: relative;
+        margin: 0;
+        padding: 0;
 }
 
 h1, h2, h3, h4, h5, h6 {
